--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Insight Random Topic Generator</title>
+  <title>Insight Topics — Random Generator</title>
   <style>
-    body { font-family: -apple-system, system-ui, Arial, sans-serif; margin: 0; background: #0b0b0f; color: #f4f4f6; }
-    header { padding: 18px 16px; position: sticky; top: 0; background: rgba(11,11,15,.9); backdrop-filter: blur(10px); border-bottom: 1px solid #222; }
-    h1 { margin: 0 0 10px; font-size: 18px; font-weight: 700; letter-spacing: .2px; }
-    .row { display: flex; gap: 10px; flex-wrap: wrap; align-items: center; }
+    body { font-family: -apple-system, system-ui, Arial, sans-serif; margin: 0; background:#0b0b0f; color:#f4f4f6; }
+    header { padding: 18px 16px; position: sticky; top: 0; background: rgba(11,11,15,.92); backdrop-filter: blur(10px); border-bottom: 1px solid #222; }
+    h1 { margin: 0 0 10px; font-size: 18px; font-weight: 700; }
+    .row { display:flex; gap:10px; flex-wrap:wrap; align-items:center; }
     input[type="search"]{
       flex: 1; min-width: 240px; padding: 10px 12px; border-radius: 10px;
       border: 1px solid #2a2a33; background: #12121a; color: #f4f4f6;
@@ -19,88 +19,59 @@
       background: #171723; color: #f4f4f6; cursor: pointer;
     }
     button:hover{ background:#1c1c2b; }
-    button:disabled{ opacity:.5; cursor:not-allowed; }
     main { padding: 18px 16px 80px; max-width: 980px; margin: 0 auto; }
-    .meta { color: #b7b7c8; font-size: 13px; margin-top: 6px; }
-    .card { background: #12121a; border: 1px solid #242433; border-radius: 14px; padding: 14px; margin-top: 14px; }
-    .topic-title { font-size: 22px; margin: 0; }
+    .card { background:#12121a; border:1px solid #242433; border-radius:14px; padding:14px; margin-top:14px; }
+    .topic-title { font-size: 26px; margin: 0; }
+    .meta { color:#b7b7c8; font-size: 13px; margin-top: 6px; }
+    a { color:#9fd0ff; }
     .pill { display:inline-block; padding: 4px 10px; border: 1px solid #2a2a33; border-radius: 999px; font-size: 12px; color:#cfcfe6; margin-right:8px; }
-    .section { margin-top: 14px; }
-    .section h3 { margin: 0 0 8px; font-size: 14px; letter-spacing: .2px; color: #d9d9ff; }
-    .para { line-height: 1.45; margin: 8px 0; color:#f1f1ff; }
-    .muted { color:#b7b7c8; }
-    .toast { position: fixed; bottom: 18px; left: 50%; transform: translateX(-50%);
-      background:#1a1a27; border:1px solid #2a2a33; color:#fff;
-      padding:10px 12px; border-radius: 999px; display:none; }
-    .list { margin-top: 10px; }
     .list button { width:100%; text-align:left; padding: 10px 12px; margin-top:8px; }
-    .kbd { font-family: ui-monospace, SFMono-Regular, Menlo, monospace; font-size: 12px; padding: 2px 6px; border:1px solid #2a2a33; border-radius:6px; color:#cfcfe6; }
+    .muted { color:#b7b7c8; }
   </style>
 </head>
 <body>
 <header>
-  <h1>Insight Random Topic Generator</h1>
+  <h1>Insight on the Scriptures — Random Topic</h1>
   <div class="row">
     <input id="q" type="search" placeholder="Search topics… (e.g., Jehovah, Abaddon, Faith)" autocomplete="off" />
-    <button id="randomBtn" title="Random topic (R)">🎲 Random</button>
-    <button id="prevBtn" title="Back (←)" disabled>← Back</button>
-    <button id="nextBtn" title="Forward (→)" disabled>Forward →</button>
-    <button id="copyBtn" title="Copy share link">🔗 Copy link</button>
+    <button id="randomBtn">🎲 Random</button>
+    <button id="openBtn" disabled>Open on JW.org</button>
   </div>
-  <div class="meta">
-    Tips: <span class="kbd">R</span> random • <span class="kbd">/</span> focus search • <span class="kbd">Enter</span> open top result
-  </div>
+  <div class="meta">Uses your <code>it_E_topics.json</code> (topics + JW.org finder links).</div>
 </header>
 
 <main>
-  <div id="status" class="muted">Loading data…</div>
+  <div id="status" class="muted">Loading topics…</div>
 
-  <div id="resultCard" class="card" style="display:none;">
-    <div class="meta" id="metaLine"></div>
-    <h2 class="topic-title" id="topicTitle"></h2>
-    <div id="content"></div>
+  <div id="topicCard" class="card" style="display:none;">
+    <div id="pills" class="meta"></div>
+    <h2 id="title" class="topic-title"></h2>
+    <div id="links" class="meta"></div>
   </div>
 
-  <div id="searchResults" class="card" style="display:none;">
-    <div class="meta">Search results</div>
-    <div id="resultsList" class="list"></div>
+  <div id="resultsCard" class="card" style="display:none;">
+    <div class="meta">Search results (click to open)</div>
+    <div id="results" class="list"></div>
   </div>
 </main>
 
-<div id="toast" class="toast"></div>
-
 <script>
-  const DATA_FILE = "insight_topics_5053.json";
+  const DATA_FILE = "it_E_topics.json";
 
-  let DB = null;             // full JSON
-  let topics = [];           // DB.topics
-  let topicsById = new Map();
-  let currentId = null;
-
-  // history navigation
-  let historyIds = [];
-  let historyPos = -1;
+  let topics = [];
+  let currentTopic = null;
 
   const $ = (id) => document.getElementById(id);
   const statusEl = $("status");
-  const cardEl = $("resultCard");
-  const metaEl = $("metaLine");
-  const titleEl = $("topicTitle");
-  const contentEl = $("content");
-  const resultsWrap = $("searchResults");
-  const resultsList = $("resultsList");
+  const topicCard = $("topicCard");
+  const titleEl = $("title");
+  const linksEl = $("links");
+  const pillsEl = $("pills");
+  const resultsCard = $("resultsCard");
+  const resultsEl = $("results");
   const qEl = $("q");
-  const prevBtn = $("prevBtn");
-  const nextBtn = $("nextBtn");
+  const openBtn = $("openBtn");
   const randomBtn = $("randomBtn");
-  const copyBtn = $("copyBtn");
-
-  function toast(msg){
-    const t = $("toast");
-    t.textContent = msg;
-    t.style.display = "block";
-    setTimeout(()=> t.style.display="none", 1600);
-  }
 
   function normalize(s){
     return (s || "")
@@ -110,78 +81,56 @@
       .trim();
   }
 
-  function setNavButtons(){
-    prevBtn.disabled = !(historyPos > 0);
-    nextBtn.disabled = !(historyPos >= 0 && historyPos < historyIds.length - 1);
+  function pickRandom(){
+    if (!topics.length) return;
+    const t = topics[Math.floor(Math.random() * topics.length)];
+    showTopic(t);
   }
 
-  function pushHistory(id){
-    // if user goes back then picks a new topic, truncate forward history
-    if (historyPos < historyIds.length - 1) {
-      historyIds = historyIds.slice(0, historyPos + 1);
-    }
-    historyIds.push(id);
-    historyPos = historyIds.length - 1;
-    setNavButtons();
-  }
+  function showTopic(t){
+    currentTopic = t;
+    const name = t.display_topic || t.topic || "(Untitled)";
+    titleEl.textContent = name;
 
-  function renderTopic(id, {push=true} = {}){
-    const t = topicsById.get(id);
-    if (!t) return;
-
-    currentId = id;
-    if (push) pushHistory(id);
-
-    // update URL hash for share links
-    location.hash = `#topic=${encodeURIComponent(String(id))}`;
-
-    // hide search results
-    resultsWrap.style.display = "none";
-
-    // header/meta
-    titleEl.textContent = t.topic || "(Untitled)";
-    const vols = (t.volumes && t.volumes.length) ? `Vol: ${t.volumes.join(", ")}` : "Vol: —";
-    const secCount = Array.isArray(t.sections) ? t.sections.length : 0;
-    metaEl.innerHTML = `
+    // Pills
+    const docCount = (t.documents || []).length;
+    pillsEl.innerHTML = `
       <span class="pill">Topic ID: ${t.topic_id}</span>
-      <span class="pill">${vols}</span>
-      <span class="pill">Sections: ${secCount}</span>
+      <span class="pill">Docs: ${docCount}</span>
     `;
 
-    // content
-    contentEl.innerHTML = "";
-    const sections = Array.isArray(t.sections) ? t.sections : [];
-
-    if (!sections.length) {
-      const div = document.createElement("div");
-      div.className = "section";
-      div.innerHTML = `<p class="para muted">No extracted text for this topic (some entries are index/redirect topics). Try another topic or search related ones.</p>`;
-      contentEl.appendChild(div);
+    // Links list (some topics have multiple docs)
+    const docs = t.documents || [];
+    if (!docs.length) {
+      linksEl.innerHTML = `<span class="muted">No linked documents found for this topic.</span>`;
+      openBtn.disabled = true;
+      openBtn.onclick = null;
     } else {
-      for (const s of sections) {
-        const wrap = document.createElement("div");
-        wrap.className = "section";
+      const primary = docs[0];
+      const url = primary.jw_org_finder_url || "";
+      openBtn.disabled = !url;
+      openBtn.onclick = () => url && window.open(url, "_blank", "noopener,noreferrer");
 
-        if (s.type === "subheading" && s.heading) {
-          wrap.innerHTML += `<h3>${escapeHtml(s.heading)}</h3>`;
-        } else if (s.type === "qa" && s.question) {
-          wrap.innerHTML += `<h3>Q: ${escapeHtml(s.question)}</h3>`;
-        }
+      const items = docs.map((d, i) => {
+        const u = d.jw_org_finder_url || "#";
+        const title = d.title || `Document ${i+1}`;
+        const pages = Array.isArray(d.page_range) ? ` • pages ${d.page_range[0]}–${d.page_range[1]}` : "";
+        return `<div style="margin-top:8px;">
+          <a href="${u}" target="_blank" rel="noopener noreferrer">${escapeHtml(title)}</a>
+          <span class="muted">• docid ${d.meps_document_id ?? "?"}${pages}</span>
+        </div>`;
+      }).join("");
 
-        const paras = (s.type === "qa") ? (s.answer || []) : (s.paragraphs || []);
-        for (const p of paras) {
-          const para = document.createElement("p");
-          para.className = "para";
-          para.textContent = p;
-          wrap.appendChild(para);
-        }
-
-        contentEl.appendChild(wrap);
-      }
+      linksEl.innerHTML = items;
     }
 
+    // hide search results
+    resultsCard.style.display = "none";
+    topicCard.style.display = "block";
     statusEl.style.display = "none";
-    cardEl.style.display = "block";
+
+    // shareable hash
+    location.hash = `#topic=${encodeURIComponent(String(t.topic_id))}`;
   }
 
   function escapeHtml(str){
@@ -193,113 +142,71 @@
       .replaceAll("'","&#039;");
   }
 
-  function showResults(items){
-    resultsList.innerHTML = "";
-    if (!items.length) {
-      resultsList.innerHTML = `<div class="muted">No matches.</div>`;
-      resultsWrap.style.display = "block";
+  function showResults(list){
+    resultsEl.innerHTML = "";
+    if (!list.length) {
+      resultsEl.innerHTML = `<div class="muted">No matches.</div>`;
+      resultsCard.style.display = "block";
       return;
     }
-    for (const t of items) {
+    for (const t of list) {
       const btn = document.createElement("button");
-      btn.textContent = t.topic;
-      btn.addEventListener("click", ()=> renderTopic(t.topic_id, {push:true}));
-      resultsList.appendChild(btn);
+      btn.textContent = t.display_topic || t.topic;
+      btn.addEventListener("click", () => showTopic(t));
+      resultsEl.appendChild(btn);
     }
-    resultsWrap.style.display = "block";
+    resultsCard.style.display = "block";
   }
 
   function search(q){
     const nq = normalize(q);
-    if (!nq) {
-      resultsWrap.style.display = "none";
-      return;
-    }
-    // simple contains search; fast enough for ~5k topics
+    if (!nq) { resultsCard.style.display = "none"; return; }
     const matches = topics
-      .filter(t => normalize(t.topic).includes(nq))
-      .slice(0, 30);
+      .filter(t => normalize(t.display_topic || t.topic).includes(nq))
+      .slice(0, 40);
     showResults(matches);
-  }
-
-  function randomTopic(){
-    const idx = Math.floor(Math.random() * topics.length);
-    const t = topics[idx];
-    renderTopic(t.topic_id, {push:true});
   }
 
   async function load(){
     try {
-      const res = await fetch(DATA_FILE, {cache:"no-store"});
+      const res = await fetch(DATA_FILE, { cache: "no-store" });
       if (!res.ok) throw new Error(`HTTP ${res.status}`);
-      DB = await res.json();
-      topics = DB.topics || [];
-      topicsById = new Map(topics.map(t => [t.topic_id, t]));
+      const db = await res.json();
+      topics = db.topics || [];
       statusEl.textContent = `Loaded ${topics.length} topics.`;
 
-      // If URL has a topic hash, open it; otherwise pick a random one
+      // open from URL hash if present
       const m = (location.hash || "").match(/topic=([^&]+)/);
       if (m) {
         const id = Number(decodeURIComponent(m[1]));
-        if (topicsById.has(id)) renderTopic(id, {push:true});
-        else randomTopic();
+        const t = topics.find(x => x.topic_id === id);
+        if (t) showTopic(t);
+        else pickRandom();
       } else {
-        randomTopic();
+        pickRandom();
       }
     } catch (e) {
-      statusEl.textContent = "Failed to load JSON. Make sure you're running a local server (not opening the file directly).";
       console.error(e);
+      statusEl.textContent = "Could not load it_E_topics.json. Make sure you’re running a local server (not double-clicking the HTML).";
     }
   }
 
-  // UI events
-  qEl.addEventListener("input", (e)=> search(e.target.value));
-  qEl.addEventListener("keydown", (e)=>{
+  qEl.addEventListener("input", (e) => search(e.target.value));
+  qEl.addEventListener("keydown", (e) => {
     if (e.key === "Enter") {
       const nq = normalize(qEl.value);
       if (!nq) return;
-      const first = topics.find(t => normalize(t.topic).includes(nq));
-      if (first) renderTopic(first.topic_id, {push:true});
+      const first = topics.find(t => normalize(t.display_topic || t.topic).includes(nq));
+      if (first) showTopic(first);
     }
   });
 
-  randomBtn.addEventListener("click", randomTopic);
+  randomBtn.addEventListener("click", pickRandom);
 
-  prevBtn.addEventListener("click", ()=>{
-    if (historyPos > 0) {
-      historyPos -= 1;
-      setNavButtons();
-      renderTopic(historyIds[historyPos], {push:false});
-    }
-  });
-
-  nextBtn.addEventListener("click", ()=>{
-    if (historyPos < historyIds.length - 1) {
-      historyPos += 1;
-      setNavButtons();
-      renderTopic(historyIds[historyPos], {push:false});
-    }
-  });
-
-  copyBtn.addEventListener("click", async ()=>{
-    const url = location.href;
-    try {
-      await navigator.clipboard.writeText(url);
-      toast("Link copied!");
-    } catch {
-      // fallback
-      prompt("Copy this link:", url);
-    }
-  });
-
-  // Keyboard shortcuts
+  // Keyboard shortcuts: / focus search, R random
   document.addEventListener("keydown", (e)=>{
-    if (e.key === "/" && document.activeElement !== qEl) {
-      e.preventDefault(); qEl.focus();
-    }
-    if (e.key.toLowerCase() === "r" && document.activeElement !== qEl) randomTopic();
-    if (e.key === "ArrowLeft" && !prevBtn.disabled) prevBtn.click();
-    if (e.key === "ArrowRight" && !nextBtn.disabled) nextBtn.click();
+    if (e.key === "/" && document.activeElement !== qEl) { e.preventDefault(); qEl.focus(); }
+    if (e.key.toLowerCase() === "r" && document.activeElement !== qEl) pickRandom();
   });
 
   load();
