--- a/index.html
+++ b/index.html
@@ -230,8 +230,7 @@
       if (first) showTopic(first);
     }
   });
-  document.getElementById("bigRandomBtn")
-    .addEventListener("click", pickRandom);
+  document.getElementById("bigRandomBtn").addEventListener("click", pickRandom);
   
   randomBtn.addEventListener("click", pickRandom);
 
